# dvc_ineuron

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  template.py  tox.ini
config/: config.yaml
notebooks/: trials.ipynb
src/DEEP_Classifier/entity/: __init__.py
src/DEEP_Classifier/utils/: __init__.py  common.py
src/deep_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/deepclassifier.egg-info/: PKG-INFO  SOURCES.txt
