[metadata]
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
    python_requires = >= 3.7

[options.extras_require]
    pytest >= 7.1.3
    mypy >= 0.971
    flake8 >= 5.0.4 # finds PEP* standards mistakes
    tox >= 3.25.1 # tests your package in multiple ens
    black >= 22.8.0 # checks, if or not , code wriite n by individual follows PEP8 standards

[options.package_data]
    DEEP_Classifier =py.typed

[flake8]
    max-line-length = 160
    exclude = __init__.py